# Component-Object-Model

./: README.md
COM Properties/prop/: prop.reg  prop.sln
COM Properties/prop/Debug/: prop.lib
COM Properties/prop/UseofFactory/: UseofFactory.sln
COM Properties/prop/UseofFactory/UseofFactory/: DemoFacory.cpp  UseofFactory.vcproj
COM Properties/prop/UseofFactory/UseofFactory/Debug/: vc90.idb  (+1 more)
COM Properties/prop/contentment/: contentment.sln
COM Properties/prop/contentment/contentment/: contentment.vcproj  inner.cpp  inner.h
COM Properties/prop/prop/: prop.cpp  prop.def  prop.h  prop.vcproj
COM Properties/prop/prop/Debug/: BuildLog.htm  mt.dep  vc90.idb
COM Properties/prop/propapp/: propapp.sln
COM Properties/prop/propapp/Debug/: propapp.ilk
COM Properties/prop/propapp/propapp/: propapp.cpp  propapp.vcproj
Containment/contentment2/: contentment2.sln
Containment/contentment2/contentment2/: contentment2.vcproj  myinner.cpp
Containment/contentment2/contentment2/Debug/: BuildLog.htm  vc90.idb
Containment/contentment2/contentment2/Release/: BuildLog.htm  vc90.idb
Containment/contentment3/: contentment3.reg  contentment3.sln
Containment/contentment3/Debug/: contentment3.exp  contentment3.ilk  contentment3.lib
Containment/contentment3/contentment3/: cont.cpp  cont.def  cont.h  contentment3.vcproj  interface.h
Containment/contentment3/contentment3/Debug/: BuildLog.htm  mt.dep  vc90.idb
Containment/contentment3/contentmentapp/: contentmentapp.sln
Containment/contentment3/contentmentapp/Debug/: contentmentapp.ilk
Containment/contentment3/contentmentapp/contentmentapp/: conainment_flaw.cpp  contentmentapp.vcproj  main.cpp
Factory Class/: ReadMe.md  ReadMe.txt
Factory Class/FactoryApp/: CMakeLists.txt  FactoryApp.cpp  FactoryApp.sln  FactoryApp.vcxproj
Factory Class/FactoryDll/: CMakeLists.txt  FactoryDll.sln  FactoryDll.vcxproj  interface.cpp  interface.h  interfaces.def
Factory Class/FactoryDll/Debug/: FactoryDll.lib
(+8 files in other folders)
